# you-animated

./: .gitignore  CMakeLists.txt  README.md  cmake.sh
cmake/Modules/: FindAssimp.cmake  FindSOIL.cmake
resources/: Animation guy.max  BaseMesh_Anim.blend  Bighat.dae  Cartuccia_3D_GOLD.dae  Cigarette_Box_-_Copy.dae  Cigarette_Box_-_Copy.mtl  Karen_Eye_dif.tga  Karen_Hair_dif.tga  Karen_HelmetField_cspec.tga  Karen_Suit.dae  Karen_Suit.mtl  Male.dae  Mettaur_BN.dae  Rusty_Weight.DAE  Titanic_Chimney.DAE  ball.dae  blobRun.dae  boomerang.dae  fountain.dae  roller shutters3.dae
resources/textures/: Karen_Eye_lum.tga  Karen_Hair_norm.tga  Karen_Hair_spec.tga  Karen_HelmetField_dif.tga  Karen_HelmetField_lum.tga  Keren_Face2_norm.tga  Keren_Face_dif.tga  Keren_Face_norm.tga  shoesoles_dif.tga
shaders/: fragment.glsl  texture.frag  texture.vert  vertex-basic.glsl  vertex.glsl
src/: AnimatedModel.cpp  AnimatedModel.h  App.cpp  App.hpp  BoneMesh.cpp  BoneMesh.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  main.cpp
